--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: #f4f4f4;
+  background-color: #ffffff;
 }
 
-/* styling of the links */
+/* styling links */
 a {
   text-decoration: none;
   color: #333;
@@ -22,17 +22,31 @@ a:hover {
   text-decoration: underline;
 }
 
-.header {
+/* Header styling */
+
+header {
   background-color: #f4f4f4;
   padding: 20px;
   text-align: center;
 }
-.nav a {
-  margin: 0 15px;
-  text-decoration: none;
-  color: #333;
+
+header h1 {
+  margin-bottom: 10px;
+  font-size: 2rem;
 }
-.content {
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  gap: 20px;
+  font-weight: bold;
+}
+
+/*---------main content----------*/
+
+main {
   padding: 20px;
 }
 .content img {
