--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ nav ul {
 main {
   padding: 20px;
   margin: 20px;
+  margin-bottom: 40px;
 }
 
 main img {
@@ -73,15 +74,18 @@ ol {
   margin-left: 20px;
 }
 
-.footer {
+/* footer styling */
+
+footer {
   background-color: #333;
   color: white;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   text-align: center;
   padding: 10px;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
 }
+
 .modal {
   display: none;
   position: fixed;
