--- a/styles.css
+++ b/styles.css
@@ -96,29 +96,29 @@ footer {
   padding: 10px;
 }
 
-/* modal */
+/* dialog */
 
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
+dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.4);
-  padding-top: 60px;
-  border-radius: 10px;
 }
+
+dialog {
+  border: none;
+  border-radius: 10px;
+  padding: 0;
+  width: 80%;
+  max-width: 600px;
+  margin: auto;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .modal-content {
   background-color: #fefefe;
-  margin: 5% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
 }
+
 .close {
   color: #aaa;
   float: right;
@@ -126,6 +126,7 @@ footer {
   font-weight: bold;
   cursor: pointer;
 }
+
 .close:hover,
 .close:focus {
   color: black;
