--- a/styles.css
+++ b/styles.css
@@ -43,16 +43,6 @@ nav ul {
   gap: 20px;
   font-weight: bold;
 }
-button {
-  background-color: #333;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  margin: 10px;
-}
 
 /* main content */
 
@@ -96,29 +86,29 @@ footer {
   padding: 10px;
 }
 
-/* dialog */
+/* modal */
 
-dialog::backdrop {
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
-}
-
-dialog {
-  border: none;
+  padding-top: 60px;
   border-radius: 10px;
-  padding: 0;
-  width: 80%;
-  max-width: 600px;
-  margin: auto;
-  top: 50%;
-  transform: translateY(-50%);
 }
-
 .modal-content {
   background-color: #fefefe;
+  margin: 5% auto;
   padding: 20px;
   border: 1px solid #888;
+  width: 80%;
 }
-
 .close {
   color: #aaa;
   float: right;
@@ -126,7 +116,6 @@ dialog {
   font-weight: bold;
   cursor: pointer;
 }
-
 .close:hover,
 .close:focus {
   color: black;
