--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ a:focus {
 
 /* Header and Navigation */
 header {
-  background: linear-gradient(to right, #f4f4f4, #e8e8e8);
+  background: #e8e8e8;
   padding: 20px;
   position: sticky;
   top: 0;
@@ -82,7 +82,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 header h1 {
@@ -91,6 +91,7 @@ header h1 {
   text-transform: uppercase;
   letter-spacing: 2px;
   margin-left: 20px;
+  padding-top: 20px;
 }
 
 .nav-container {
@@ -212,6 +213,17 @@ dialog {
   animation: fadeIn 0.3s ease-in-out;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-60%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(-50%);
+  }
+}
+
 dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -292,17 +304,6 @@ dialog::backdrop {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-60%);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(-50%);
-  }
 }
 
 /* Form Elements */
