--- a/styles.css
+++ b/styles.css
@@ -15,28 +15,28 @@ body {
 
 /* Typography */
 h1 {
-  font-size: 2.5rem; /* Adjusted for better readability */
+  font-size: 2.5rem;
   margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 2rem; /* Adjusted for better readability */
+  font-size: 2rem;
   margin-bottom: 10px;
 }
 
 h3 {
-  font-size: 1.5rem; /* Adjusted for better readability */
+  font-size: 1.5rem;
   margin-bottom: 10px;
 }
 
 p {
-  font-size: 1rem; /* Base paragraph font size */
+  font-size: 1rem;
   margin-bottom: 20px;
 }
 
 ol {
   margin-left: 20px;
-  list-style-position: inside; /* This will align numbers with content */
+  list-style-position: inside; /* To align numbers with content */
   padding-left: 0;
   font-size: 1rem; /* Ensure list items match paragraph font size */
 }
@@ -61,10 +61,6 @@ ol {
 a {
   text-decoration: none;
   color: #333;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 a:focus {
